--- a/package.json
+++ b/package.json
@@ -61,17 +61,11 @@
       "dist": "dist/amd"
     },
     "dependencies": {
-      "abalmus/aurelia-select2": "github:abalmus/aurelia-select2@master",
       "jquery": "^3.1.1",
-      "select2/select2": "github:select2/select2@^4.0.3"
+      "select2": "github:select2/select2@^4.0.3"
     },
     "devDependencies": {
       "aurelia-polyfills": "^1.0.0-beta.1.1.0"
-    },
-    "overrides": {
-      "github:abalmus/aurelia-select2@master": {
-        "jspmPackage": true
-      }
     }
   }
 }
